# LanguageReferences

./: .editorconfig  .gitignore  README.md  TODO.md
C/: .gitignore  README.md
C++/: .gitignore  README.md
C++/arrays/: array_library.cpp  arrays_and_functions.cpp  basic_arrays.cpp  multidimensional_arrays.cpp
C++/casting/: casting.cpp
C++/cmake/: CMakeLists.txt
C++/cmake/include/example_project/: project_interface.h
C++/cmake/libs/example_lib_one/: CMakeLists.txt
C++/cmake/libs/example_lib_one/include/example_lib_one/: example_lib_one_interface.h
C++/cmake/libs/example_lib_one/src/: example_lib_one.cpp
C++/cmake/libs/example_lib_two/include/example_lib_two/: example_lib_two_interface.h
C++/cmake/libs/example_lib_two/src/: example_lib_two.cpp
C++/cmake/src/: example_project.cpp  example_project.h  main.cpp  project_interface.cpp
C++/command_line_arguments/: command_line_arguments.cpp
C++/data_structures/: hashmap.cpp  linked_list.cpp  queue.cpp  stack.cpp
C++/enums/: enums.cpp
C++/error_handling/: error_handling.cpp
C++/files/: file.txt  reading_binary_files.cpp  reading_files.cpp  writing_binary_files.cpp  writing_files.cpp
C++/friends/: friends.cpp
C++/generics_and_templates/: class_templates.cpp  function_templates.cpp
C++/gui/: Makefile  gui.cpp
C++/iterators/: iterators.cpp
C++/lambda_expressions/: lambda_expressions.cpp
C++/math_library/: math_library.cpp
CMake/: README.md
Java/: .gitignore  README.md
Make/: README.md
Markdown/: README.md
Python/: .gitignore  README.md
Rust/: .gitignore  README.md
(+393 files in other folders)
